--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
         />
+        <link
+            href="https://fonts.googleapis.com/css?family=Calligraffitti&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
